IndexedDB: WebCore::IDBKey objects are leaked https://bugs.webkit.org/show_bug.cgi?id=77114

Reviewed by Tony Chang.

Fixing memory leaks, no new tests.

* storage/IDBKey.h:
(WebCore::IDBKey::createInvalid):
(WebCore::IDBKey::createNumber):
(WebCore::IDBKey::createString):
(WebCore::IDBKey::createDate):
(WebCore::IDBKey::createArray):


git-svn-id: svn://svn.chromium.org/blink/trunk@106059 bbb929c8-8fbe-4397-9dbb-9b2b20218538